# kancil

./: .gitignore  README.md  gradle.properties  keystore.properties.template  privacy_policy.md  settings.gradle.kts  setup.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/abdullahsolutions/kancil/: ChatMessage.kt  ChatViewModel.kt  KancilHttpServer.kt  KancilService.kt  LlamaEngine.kt  MainActivity.kt  ModelDownloader.kt  ModelState.kt  WebSearcher.kt
app/src/main/java/com/abdullahsolutions/kancil/ui/: ChatScreen.kt  MarkdownText.kt
app/src/main/java/com/abdullahsolutions/kancil/ui/theme/: Theme.kt
app/src/main/res/values/: colors.xml  themes.xml
gradle/: libs.versions.toml
